# surf

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  Makefile.in  README  README.md  TODO  configure  configure.ac  env.sh  setup.py
cmake/: FindOptionalPackage.cmake  FindOptionalPkgPackage.cmake
depends/: .gitignore  Makefile  env.sh
examples/adddata/: frgsurf.inp  ipython_log.py  simbox.xyz
examples/python_interface/: dist2surf.py
examples/solute/: 1ar1.inp
examples/surface/: dppc64.xyz  plot_2d_surf.py  surf.inp  surf.vmd  surf_points.vmd
examples/water_slab/: .gitignore  getavzprofcubes.py  grompp.mdp  surf.vmd  topol.top
src/: CMakeLists.txt  Makefile.am  Makefile.in  atom_param.c  atom_param.h  constants.h  cube.c  cube.h  declarations.h  errors.c  errors.h  io.c  io.h  main.c  main.h  molmanipul.c  molmanipul.h  surf.c  surf.h  trajanal.c  trajanal.h  types.h  utils.c  utils.h
src/xdrfile/: CMakeLists.txt
surf/: __init__.py  _surf.pyx  c_ext.c  c_surf.c  ili.py
tests/: 0_atrep_surflo.xyz  0_atrep_surfup.xyz  0_instant-surface.cube  surf.inp
tests/adddata/: data.lmp  frgsurf.inp  run.lmp
tests/multiple_zetas/: frgsurf.inp  mltplzt.inp
tests/python/: conftest.py  dist2surf.py  test_dist2surf.py
tests/python_interface/: dist2surf.py  gsldist2surf.py  script.py  surface_mcubes.py  test.cube
tests/solute/: 1AR1_solv.xyz  1ar1.inp
tests/surface/: plot_2d_surf.py  surf.inp  surf.vmd  surf_points.vmd
tests/water_slab/: .gitignore  atrep-comp.vmd  conf.gro  conf.xyz  frgsurf.inp  test.vmd
